--- a/index.html
+++ b/index.html
@@ -1,11 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset=utf-8>
+    <title>Three.js Object Tester</title>
+    <style>
+        body { margin: 0; overflow: hidden; }
+        canvas { width: 100%; height: 100% }
+    </style>
 </head>
-<body>
-  
+
+<body onload="init()">
+<script src="js/three.js"></script>
+<script src="js/TrackballControls.js"></script>
+<script src="js/stats.min.js"></script>
+
+
+<script>
+    // Globális változók
+    var WIDTH, HEIGHT, aspectRatio;
+    var renderer;
+    var scene, camera;
+    var controls;
+    let textureLoader = new THREE.TextureLoader();
+    let groundMesh;
+    let stats;
+
+    function init() {
+        // Böngésző ablakméret lekérése és méretarány számítása
+        HEIGHT = window.innerHeight;
+        WIDTH = window.innerWidth;
+        aspectRatio = WIDTH / HEIGHT;
+
+        // Renderer létrehozása és DOM-hoz adása
+        renderer = new THREE.WebGLRenderer( { antialias: true } );
+        renderer.setSize( WIDTH, HEIGHT );
+        renderer.setClearColor( 0x000000 );
+        renderer.shadowMap.enabled = true;
+        document.body.appendChild( renderer.domElement );
+
+        // Színtér létrehozása
+        scene = new THREE.Scene();
+
+        // Kamera létrehozása és vetítési paramétereinek beállítása
+        camera = new THREE.PerspectiveCamera( 75, aspectRatio, 0.1, 1000 );
+        camera.position.set( 0, 20, 20 );
+        camera.lookAt( scene.position );
+
+        // Talaj
+        groundMesh = createGround();
+        scene.add( groundMesh );
+
+
+
+        let boxGeometry = new THREE.BoxGeometry(5, 5, 5);
+        let boxMaterial = new THREE.MeshPhongMaterial( {
+            color: 0x00aaaa,
+            shininess: 80,
+            specular: 0x001011
+        });
+        let boxMesh = new THREE.Mesh( boxGeometry, boxMaterial );
+        boxMesh.position.y = 5;
+        boxMesh.castShadow = true;
+        boxMesh.receiveShadow = false;
+        scene.add(boxMesh);
+
+        // Fény
+        let dLight = new THREE.DirectionalLight( 0xdddddd, 1 );
+        dLight.position.set( 0, 100, 100 );
+        dLight.target = boxMesh;
+        dLight.castShadow = true;
+        dLight.shadow.mapSize.width = 2048;
+        dLight.shadow.mapSize.height = 2048;
+        scene.add( dLight );
+
+        // Koordináta
+        let axisHelper = new THREE.AxisHelper(20);
+        scene.add( axisHelper );
+
+        var ambientLight = new THREE.AmbientLight( 0xffffff, 0.5 );
+        scene.add( ambientLight );
+
+        // Az ablak későbbi átméretezése esetén visszahívható függvény megadása
+        window.addEventListener( 'resize', handleWindowResize, false );
+
+        // Kamera vezérlés
+        controls = new THREE.TrackballControls( camera, renderer.domElement );
+        controls.rotateSpeed = 5.0;
+        controls.panSpeed = 1.0;
+
+        addStatsObject();
+        // Első képkocka rajzolása
+        render();
+    }
+
+    function addStatsObject() {
+        stats = new Stats();
+        stats.setMode(0);
+
+        stats.domElement.style.position = 'absolute';
+        stats.domElement.style.left = '0px';
+        stats.domElement.style.top = '0px';
+
+        document.body.appendChild( stats.domElement );
+    }
+
+    function createGround() {
+        let middleGeometry = new THREE.CylinderGeometry( 2000, 2000, 100, 200, 10, true);
+        let middleMaterial = new THREE.MeshPhongMaterial( {
+            shininess: 20,
+            specular: 0x111111,
+            side: THREE.DoubleSide
+        } );
+        let texture = textureLoader.load('assets/grass.jpg');
+        texture.wrapS = THREE.RepeatWrapping;
+        texture.repeat.set(200, 1);
+        middleMaterial.map = texture;
+        let mesh = new THREE.Mesh( middleGeometry, middleMaterial );
+
+        mesh.receiveShadow = true;
+        mesh.castShadow = false;
+
+        for (let i = 0; i < 2; i++) {
+            let sideGeometry = new THREE.CylinderGeometry( 2000, 2000, 100, 200, 10, true);
+            let sideMaterial = new THREE.MeshPhongMaterial( {
+                shininess: 20,
+                specular: 0x111111,
+                side: THREE.DoubleSide
+            } );
+            texture = textureLoader.load('assets/soil.jpg');
+            texture.wrapS = THREE.RepeatWrapping;
+            texture.repeat.set(200, 1);
+            sideMaterial.map = texture;
+            let sideMesh = new THREE.Mesh( sideGeometry, sideMaterial );
+            sideMesh.receiveShadow = true;
+            sideMesh.castShadow = false;
+            sideMesh.position.y = i ? -100: 100;
+            mesh.add(sideMesh);
+        }
+
+        mesh.position.y = -2000;
+        mesh.rotation.z = THREE.Math.degToRad(90);
+
+        return mesh;
+    }
+
+    function handleWindowResize() {
+        // Az ablak átméretezése esetén a kamera vetítési paraméterek újraszámolása
+        HEIGHT = window.innerHeight;
+        WIDTH = window.innerWidth;
+        console.log( 'WIDTH=' + WIDTH + '; HEIGHT=' + HEIGHT );
+        renderer.setSize( WIDTH, HEIGHT );
+        aspectRatio = WIDTH / HEIGHT;
+        camera.aspect = aspectRatio;
+        camera.updateProjectionMatrix();
+    }
+
+    var render = function () {
+        stats.update();
+        // Újabb képkocka rajzolásának kérése.
+        // Maximálisan 60 FPS-t biztosít a rendszer.
+        requestAnimationFrame( render );
+        // Kamera vezérlés
+        controls.update();
+        groundMesh.rotation.x += 0.0001;
+        // 3D -> 2D vetített kép kiszámítása.
+        // scene 3D színtér képe a camera kamera szemszögéből.
+        renderer.render( scene, camera );
+    };
+
+
+
+</script>
 </body>
 </html>
