--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     let groundMeshPair = [];
     let currentGroundMesh = 0;
     let heroObject;
+    let forestObject;
     let stats;
-    let PLANE_SIZE = 600;
+    let PLANE_SIZE = 2000;
     let groundUpdateNeeded = false;
     let leftKeyPressed = false;
     let rightKeyPressed = false;
@@ -49,13 +50,13 @@
         scene = new THREE.Scene();
 
         // Kamera létrehozása és vetítési paramétereinek beállítása
-        camera = new THREE.PerspectiveCamera( 90, aspectRatio, 0.1, 1000 );
+        camera = new THREE.PerspectiveCamera( 75, aspectRatio, 0.1, 1000 );
         camera.position.set( 0, 20, 20 );
         camera.lookAt( scene.position );
 
         // Talaj
-        groundMeshPair[0] = createGround(-200); //plane hosszúságtól függ
-        groundMeshPair[1] = createGround(-800);
+        groundMeshPair[0] = createGround(0); //plane hosszúságtól függ
+        groundMeshPair[1] = createGround(-2000);
         // groundMeshPair[1].material.wireframe = true;
         scene.add(groundMeshPair[0]);
         scene.add(groundMeshPair[1]);
@@ -71,10 +72,10 @@
         dLight.castShadow = true;
         dLight.shadow.mapSize.width = 2048;
         dLight.shadow.mapSize.height = 2048;
-        dLight.shadow.camera.left = -15;
-        dLight.shadow.camera.right = 15;
-        dLight.shadow.camera.top = 15;
-        dLight.shadow.camera.bottom = -15;
+        dLight.shadow.camera.left = -50;
+        dLight.shadow.camera.right = 50;
+        dLight.shadow.camera.top = 50;
+        dLight.shadow.camera.bottom = -50;
 
         scene.add( dLight );
 
@@ -93,7 +94,25 @@
         controls.rotateSpeed = 5.0;
         controls.panSpeed = 1.0;
 
+        window.addEventListener("keydown", function () {
+            if (event.keyCode == 37) {
+                leftKeyPressed = true;
+            } else if (event.keyCode == 39) {
+                rightKeyPressed = true;
+            }
+        });
+
+        window.addEventListener("keyup", function () {
+            if (event.keyCode == 37) {
+                leftKeyPressed = false;
+            } else if (event.keyCode == 39) {
+                rightKeyPressed = false;
+            }
+        });
+
         addStatsObject();
+        forestObject = generateForest();
+        scene.add(forestObject);
         animateHero();
         // Első képkocka rajzolása
         render();
@@ -110,6 +129,7 @@
         }
     }
 
+
     function addStatsObject() {
         stats = new Stats();
         stats.setMode(0);
@@ -119,6 +139,81 @@
         stats.domElement.style.top = '0px';
 
         document.body.appendChild( stats.domElement );
+    }
+
+    function randomIntFromInterval(min, max) {
+        return Math.floor(Math.random() * (max - min + 1) + min);
+    }
+
+    function generateTree() {
+        let treeObject = new THREE.Object3D();
+        let trunkGeometry = new THREE.CylinderGeometry(1, 3, 25, 10);
+        let trunkMaterial = new THREE.MeshPhongMaterial({
+            color: 0x8b4513,
+            shininess: 20,
+            specular: 0x001011
+        });
+        let trunkMesh = new THREE.Mesh(trunkGeometry, trunkMaterial);
+        trunkMesh.position.y -= 16.5;
+        //trunkMesh.castShadow = true;
+        treeObject.add(trunkMesh);
+        let mainGreeneryGeometry = new THREE.SphereGeometry( 8, 32, 32 );
+        let mainGreeneryMaterial = new THREE.MeshPhongMaterial({
+            color: 0x2f7532,
+            shininess: 20,
+            specular: 0x001011
+        });
+        let mainGreeneryMesh = new THREE.Mesh(mainGreeneryGeometry, mainGreeneryMaterial);
+
+        //mainGreeneryMesh.castShadow = true;
+        treeObject.add(mainGreeneryMesh);
+
+        
+
+        let possiblePositions = [-4, -3, -2, 2, 3, 4];
+        for (let i = 0; i < 30; i++) {
+            let radius = randomIntFromInterval(3, 6);
+            let diverseGreeneryGeometry = new THREE.SphereGeometry( radius, 32, 32 );
+            let diverseGreeneryMaterial = new THREE.MeshPhongMaterial({
+                color: 0x2f7532,
+                shininess: 20,
+                specular: 0x001011
+            });
+            let diverseGreeneryMesh = new THREE.Mesh(diverseGreeneryGeometry, diverseGreeneryMaterial);
+            diverseGreeneryMesh.position.x = possiblePositions[randomIntFromInterval(0, 3)];
+            diverseGreeneryMesh.position.z = possiblePositions[randomIntFromInterval(0, 3)];
+            diverseGreeneryMesh.position.y = possiblePositions[randomIntFromInterval(0, 3)];
+
+
+            treeObject.add(diverseGreeneryMesh);
+        }
+
+
+        treeObject.rotation.y = THREE.Math.degToRad(randomIntFromInterval(0, 360));
+        treeObject.position.y = 28;
+        return treeObject;
+    }
+
+    function generateForest() {
+        let forest = new THREE.Object3D();
+        let rowCount = 2;
+        let columnCount = 2;
+        for(let i = 0; i < 2; i++) {
+            for (let j = 0; j < rowCount; j++) {
+                for (let k = 0; k < columnCount; k++) {
+                    let tree = generateTree();
+                    tree.position.z = j * -20;
+                    if (i == 0) {
+                        tree.position.x = randomIntFromInterval(-140, -20);
+                    } else {
+                        tree.position.x = randomIntFromInterval(20, 140);
+                    }
+                    forest.add(tree);
+                }
+            }
+        }
+        console.log(THREE.GeometryUtils.merge);
+        return forest;
     }
 
     function createHero() {
@@ -1011,44 +1106,6 @@
         heroObject.getObjectByName("rightArm").rotation.x = THREE.Math.degToRad(pos.rightArm);
     }
     function createGround(startingPos) {
-        /*let middleGeometry = new THREE.CylinderGeometry( 2000, 2000, 100, 200, 10, true);
-        let middleMaterial = new THREE.MeshPhongMaterial( {
-            shininess: 20,
-            specular: 0x111111,
-            side: THREE.DoubleSide
-        } );
-        let texture = textureLoader.load('assets/grass.jpg');
-        texture.wrapS = THREE.RepeatWrapping;
-        texture.repeat.set(200, 1);
-        middleMaterial.map = texture;
-        let mesh = new THREE.Mesh( middleGeometry, middleMaterial );
-
-        mesh.receiveShadow = true;
-        mesh.castShadow = false;
-
-        for (let i = 0; i < 2; i++) {
-            let sideGeometry = new THREE.CylinderGeometry( 2000, 2000, 400, 200, 10, true);
-            let sideMaterial = new THREE.MeshPhongMaterial( {
-                shininess: 20,
-                specular: 0x111111,
-                side: THREE.DoubleSide
-            } );
-            texture = textureLoader.load('assets/soil.jpg');
-            texture.wrapS = THREE.RepeatWrapping;
-            texture.wrapT = THREE.RepeatWrapping;
-            texture.repeat.set(200, 4);
-            sideMaterial.map = texture;
-            let sideMesh = new THREE.Mesh( sideGeometry, sideMaterial );
-            sideMesh.receiveShadow = true;
-            sideMesh.castShadow = false;
-            sideMesh.position.y = i ? -250: 250;
-            mesh.add(sideMesh);
-        }
-
-        mesh.position.y = -2000;
-        mesh.rotation.z = THREE.Math.degToRad(90);
-
-        return mesh;*/
         let middleGeometry = new THREE.PlaneGeometry( 40, PLANE_SIZE);
         let middleMaterial = new THREE.MeshPhongMaterial( {
             shininess: 20,
@@ -1057,7 +1114,7 @@
         } );
         let texture = textureLoader.load('assets/grass.jpg');
         texture.wrapT = THREE.RepeatWrapping;
-        texture.repeat.set(1, 15);
+        texture.repeat.set(1, 100);
         middleMaterial.map = texture;
         let mesh = new THREE.Mesh( middleGeometry, middleMaterial );
 
@@ -1074,7 +1131,7 @@
             texture = textureLoader.load('assets/soil.jpg');
             texture.wrapS = THREE.RepeatWrapping;
             texture.wrapT = THREE.RepeatWrapping;
-            texture.repeat.set(5, 15);
+            texture.repeat.set(5, 100);
             sideMaterial.map = texture;
             let sideMesh = new THREE.Mesh( sideGeometry, sideMaterial );
             sideMesh.receiveShadow = true;
@@ -1089,11 +1146,11 @@
     }
 
     function updateGround() {
-        if (groundMeshPair[currentGroundMesh].position.z >= 100 && !groundUpdateNeeded) {
+        if (groundMeshPair[currentGroundMesh].position.z >= 0 && !groundUpdateNeeded) {
             groundUpdateNeeded = true;
             currentGroundMesh = 1 - currentGroundMesh;
             scene.remove(groundMeshPair[currentGroundMesh]);
-            groundMeshPair[currentGroundMesh] = createGround(-500);
+            groundMeshPair[currentGroundMesh] = createGround(-2000 + groundMeshPair[1-currentGroundMesh].position.z);
             scene.add(groundMeshPair[currentGroundMesh]);
             groundUpdateNeeded = false;
         }
@@ -1121,24 +1178,9 @@
         // heroObject.getObjectByName("leftFoot").rotation.x += 0.01;
         //heroObject.getObjectByName("leftLeg").getObjectByName("lowerLeftLeg").rotation.x -= 0.1;
         //heroObject.getObjectByName("rightLeg").getObjectByName("lowerRightLeg").rotation.x -= 0.1;
-        groundMeshPair[0].position.z += 0.5;
-        groundMeshPair[1].position.z += 0.5;
+        groundMeshPair[0].position.z += 1;
+        groundMeshPair[1].position.z += 1;
 
-        window.addEventListener("keydown", function (event) {
-            if (event.keyCode == 37) {
-                leftKeyPressed = true;
-            } else if (event.keyCode == 39) {
-                rightKeyPressed = true;
-            }
-        });
-
-        window.addEventListener("keyup", function (event) {
-            if (event.keyCode == 37) {
-                leftKeyPressed = false;
-            } else if (event.keyCode == 39) {
-                rightKeyPressed = false;
-            }
-        });
         handleMovement();
         updateGround();
         // 3D -> 2D vetített kép kiszámítása.
